[tool.poetry]
name = "onqlave-python"
version = "0.1.0"
description = "The Python SDK for interacting with the Onqlave Platform"
authors = ["DC <dc@onqlave.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bleach = "6.0.0'"
pycryptodome = "3.18.0"
rsa = "4.9"
cryptography = "41.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
